Changing blog title from default value

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript">
       window.location.href = 'blog/';
     </script>
-    <title>Title of Your Blog</title>
+    <title>Easy-Physi · Physics for all</title>
   </head>
   <body>
     If you are not redirected automatically, follow this
